language_tests/source_files/valid/generic_default_fallback.tr
// CHECK_ONLY
// Test: Default fallback for generic type parameters.
// When a generic parameter has a default and inference cannot determine
// a concrete type, the default should be applied as a fallback.

struct Box[T = int32] { val: T }

struct Wrapper[T = int32] { }

func main() {
    // Inference from field type overrides default (T = bool from val: true)
    let a = Box { val: true }

    // Explicit annotation overrides default
    let b: Box[bool] = Box { val: true }

    // Default fallback: T is unconstrained, so it falls back to int32
    let w = Wrapper {}

    // Explicit annotation overrides default
    let w2: Wrapper[bool] = Wrapper {}
}
