language_tests/source_files/invalid/copy_generic_unbounded.tr
// Test: Copy requires generic parameter bounds
// A generic struct cannot derive Copy unless type parameters are also Copy.

// ERROR: T is not constrained to be Copy
struct Container[T]: Copy {
    value: T
}

func main() {
    let c = Container[int32] { value: 42 }
    print("This should not compile")
}
